test_suite/tests/ui/common/derive_unchecked.rs
use nutype::nutype;

#[nutype(
    derive_unchecked(::std::fmt::Debug),
)]
struct Name(String);

fn main() { }

